napravljena funkcija za menjanje jezika

--- a/index.html
+++ b/index.html
@@ -3,9 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrej Lazic Web Portofolio</title>
+    <title>Andrej Lazic</title>
+    <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
+    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <nav class="eng">
+            <a href="home">Home</a>
+            <a href="about">About</a>
+            <a href="projects">Projects</a>
+            <a href="contact">Contact</a>
+        </nav>
+
+        <nav class="srb">
+            <a href="home">Home</a>
+            <a href="about">O meni</a>
+            <a href="projects">Projekti</a>
+            <a href="contact">Kontakt</a>
+        </nav>
+
+        <label class="switch">
+            <input type="checkbox" id="languageSwitch">
+            <span class="slider round"></span>
+        </label>
+    </header>
+
+    <body>
+
+    </body>
     
 </body>
 </html>
