--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Andrej Lazic</title>
+    <title>Andrej Lazić</title>
     <script src="https://code.jquery.com/jquery-3.1.1.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
@@ -11,27 +11,83 @@
 <body>
     <header>
         <nav class="eng">
-            <a href="home">Home</a>
-            <a href="about">About</a>
-            <a href="projects">Projects</a>
-            <a href="contact">Contact</a>
+            <a href="#home">Home</a>
+            <a href="#about">About</a>
+            <a href="#skill">Skills</a>
+            <a href="#projects">Projects</a>
+            <a href="#contact">Contact</a>
         </nav>
 
         <nav class="srb">
-            <a href="home">Home</a>
-            <a href="about">O meni</a>
-            <a href="projects">Projekti</a>
-            <a href="contact">Kontakt</a>
+            <a href="#home">Home</a>
+            <a href="#about">O meni</a>
+            <a href="#skill">Veštine</a>
+            <a href="#projects">Projekti</a>
+            <a href="#contact">Kontakt</a>
         </nav>
 
         <label class="switch">
             <input type="checkbox" id="languageSwitch">
             <span class="slider round"></span>
         </label>
+
+        <img id="themeToggle" src="brightness.png">
     </header>
 
     <body>
+        <h2 class="eng" id="home">Home</h2>
+        <h2 class="srb" id="home">Home</h2>
+            <p>At <b>Around the world</b>, we
+                believe that travel is one of
+                the greatest gifts life has to
+                offer. That's why we're
+                dedicated to making your journeys
+                as seamless and enjoyable as 
+                possible.
+                Whether you're seeking adventure,
+                relaxation, or a combination of
+                both, we've got you covered.
+                With a wide range of destinations
+                and customizable travel packages,
+                you'll be able to create the trip
+                of a lifetime.
+            </p>
+            <p>Our team of experienced travel
+                consultants are passionate about
+                travel and will work with you
+                to design an itinerary that fits
+                your individual needs and budget.
+                So why wait? Book your next adventure
+                with <b>Around the world</b> today 
+                and start creating memories that 
+                will last a lifetime!
+            </p>
+        <h2 class="eng" id="about">About</h2>
+        <h2 class="srb" id="about">O meni</h2>
+            <p>At <b>Around the world</b>, we are
+            a team of passionate travelers 
+            dedicated to helping our clients
+            experience the world. With years of
+            experience in the travel industry, 
+            our knowledgeable and experienced 
+            staff will work with you to plan and 
+            book your next journey.
+            </p>
+        <h2 class="eng" id="skill">Skills</h2>
+        <h2 class="srb" id="skill">Veštine</h2>
+            <ul>
+                <li>Adults</li>
+                <li>School groups</li>
+                <li>Students</li>
+                <li>Family</li>
+                <li>Corporate</li>
+                <li>Honeymoon</li>
+            </ul>
+        <h2 class="eng" id="projects">Projects</h2>
+        <h2 class="srb" id="projects">Projekti</h2>
 
+        <h2 class="eng" id="contact">Contact</h2>
+        <h2 class="srb" id="contact">Kontakt</h2>
     </body>
     
 </body>
