ispravka id Srb

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
         </nav>
 
         <nav class="srb">
-            <a href="#home">Home</a>
-            <a href="#about">O meni</a>
-            <a href="#skill">Veštine</a>
-            <a href="#projects">Projekti</a>
-            <a href="#contact">Kontakt</a>
+            <a href="#homeSrb">Home</a>
+            <a href="#aboutSrb">O meni</a>
+            <a href="#skillSrb">Veštine</a>
+            <a href="#projectsSrb">Projekti</a>
+            <a href="#contactSrb">Kontakt</a>
         </nav>
 
         <label class="switch">
@@ -36,7 +36,7 @@
 
     <body>
         <h2 class="eng" id="home">Home</h2>
-        <h2 class="srb" id="home">Home</h2>
+        <h2 class="srb" id="homeSrb">Home</h2>
             <p>At <b>Around the world</b>, we
                 believe that travel is one of
                 the greatest gifts life has to
@@ -63,7 +63,7 @@
                 will last a lifetime!
             </p>
         <h2 class="eng" id="about">About</h2>
-        <h2 class="srb" id="about">O meni</h2>
+        <h2 class="srb" id="aboutSrb">O meni</h2>
             <p>At <b>Around the world</b>, we are
             a team of passionate travelers 
             dedicated to helping our clients
@@ -74,7 +74,7 @@
             book your next journey.
             </p>
         <h2 class="eng" id="skill">Skills</h2>
-        <h2 class="srb" id="skill">Veštine</h2>
+        <h2 class="srb" id="skillSrb">Veštine</h2>
             <ul>
                 <li>Adults</li>
                 <li>School groups</li>
@@ -84,10 +84,10 @@
                 <li>Honeymoon</li>
             </ul>
         <h2 class="eng" id="projects">Projects</h2>
-        <h2 class="srb" id="projects">Projekti</h2>
+        <h2 class="srb" id="projectsSrb">Projekti</h2>
 
         <h2 class="eng" id="contact">Contact</h2>
-        <h2 class="srb" id="contact">Kontakt</h2>
+        <h2 class="srb" id="contactSrb">Kontakt</h2>
     </body>
     
 </body>
