--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#contact">Kontakt</a>
         </nav>
 
-        <img id="themeToggle" src="brightness.png">
+        <i class='bx bxs-moon' id="themeToggle"></i>
     </header>
 
     <body>
@@ -50,10 +50,7 @@
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and scrambled it to make a type 
                 specimen book. It has survived not only five centuries, but also the leap into 
-                electronic typesetting, remaining essentially unchanged. It was popularised in 
-                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                and more recently with desktop publishing software like Aldus PageMaker including 
-                versions of Lorem Ipsum.</p>
+                electronic typesetting, remaining essentially unchanged.</p>
 
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/andrej-lazic"><i class='bx bxl-linkedin-square' ></i></a>
@@ -62,20 +59,17 @@
                     <a href="https://www.instagram.com/life_of_laky"><i class='bx bxl-instagram' ></i></a>
                 </div>
 
-                <a href="#" class="btn">Download</a>
+                <a class="btn" href="Andrej Lazic CV.pdf" download>Download CV</a>
             </div>
 
             <div class="home-content srb">
-                <h3>Caos, ja sam</h3>
+                <h3>Ćaos, ja sam</h3>
                 <h1>Andrej Lazić</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
                 Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
                 when an unknown printer took a galley of type and scrambled it to make a type 
                 specimen book. It has survived not only five centuries, but also the leap into 
-                electronic typesetting, remaining essentially unchanged. It was popularised in 
-                the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                and more recently with desktop publishing software like Aldus PageMaker including 
-                versions of Lorem Ipsum.</p>
+                electronic typesetting, remaining essentially unchanged.</p>
 
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/andrej-lazic"><i class='bx bxl-linkedin-square' ></i></a>
@@ -84,7 +78,7 @@
                     <a href="https://www.instagram.com/life_of_laky"><i class='bx bxl-instagram' ></i></a>
                 </div>
                 
-                <a href="#" class="btn">Preuzmi</a>
+                <a class="btn" href="Andrej Lazic CV.pdf" download>Preuzmi CV</a>
             </div>
             
         </section>
