--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
             <div class="home-content eng">
                 <h3>Hello, I am</h3>
                 <h1>Andrej Lazić</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type 
-                specimen book. It has survived not only five centuries, but also the leap into 
-                electronic typesetting, remaining essentially unchanged.</p>
+                <p>
+                    Student on final year at the Faculty of Technical Sciences, specializing in Computer 
+                    Science and Automation, and I am a passionate enthusiast in the field of Web and Software 
+                    Development. Here, you can find all the relevant information about me, my previous work, 
+                    and projects, and you have the opportunity to get in touch with me. I am currently seeking 
+                    my first job in this field and I am excited about new challenges and opportunities for 
+                    collaboration.
+                </p>
 
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/andrej-lazic"><i class='bx bxl-linkedin-square' ></i></a>
@@ -59,17 +62,19 @@
                     <a href="https://www.instagram.com/life_of_laky"><i class='bx bxl-instagram' ></i></a>
                 </div>
 
-                <a class="btn" href="Andrej Lazic CV.pdf" download>Download CV</a>
+                <a class="btn" href="Andrej Lazić CV (English).pdf" download>Download CV</a>
             </div>
 
             <div class="home-content srb">
                 <h3>Ćaos, ja sam</h3>
                 <h1>Andrej Lazić</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                when an unknown printer took a galley of type and scrambled it to make a type 
-                specimen book. It has survived not only five centuries, but also the leap into 
-                electronic typesetting, remaining essentially unchanged.</p>
+                <p>
+                    Student sam završne godine na Fakultetu tehničkih nauka, smer Računarstvo i automatika,
+                    i strastveni sam entuzijasta u oblasti Web i Software development-a. Ovde možeš pronaći sve
+                    relevantne informacije o meni, moje dosadašnje radove i projekte, te imaš mogućnost da stupiš 
+                    u kontakt sa mnom. Trenutno sam u potrazi za svojim prvim poslom u ovom polju i radujem se novim 
+                    izazovima i mogućnostima za saradnju.
+                </p>
 
                 <div class="social-media">
                     <a href="https://www.linkedin.com/in/andrej-lazic"><i class='bx bxl-linkedin-square' ></i></a>
@@ -78,7 +83,7 @@
                     <a href="https://www.instagram.com/life_of_laky"><i class='bx bxl-instagram' ></i></a>
                 </div>
                 
-                <a class="btn" href="Andrej Lazic CV.pdf" download>Preuzmi CV</a>
+                <a class="btn" href="Andrej Lazić CV (Srpski).pdf" download>Preuzmi CV</a>
             </div>
             
         </section>
