About, Contact & Footer

--- a/index.html
+++ b/index.html
@@ -89,8 +89,60 @@
         </section>
 
         <section id="about">
-            <h2 class="eng">About</h2>
-            <h2 class="srb">O meni</h2>
+            <h2 class="eng">About<span> me</span></h2>
+            <h2 class="srb">O<span> meni</span></h2>
+            <div class="about">
+                <div class="about-content eng">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
+                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
+                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
+                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br>
+                    <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
+                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
+                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
+                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+
+                <div class="about-info eng">
+                    <p><span>Born:</span> 23. july 1995.</p>
+                    <p><span>Age:</span> 27</p>
+                    <p><span>Email:</span> ane.lazic@gmail.com</p>
+                    <p><span>Phone:</span> +381 637372168</p>
+                    <p><span>Residence:</span> Novi Sad, Serbia</p>
+                </div>
+
+                <div class="about-content srb">
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
+                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
+                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
+                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br>
+                    <br>
+                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
+                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
+                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
+                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
+                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
+                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    </p>
+                </div>
+
+                <div class="about-info srb">
+                    <p><span>Rođen:</span> 23. jul 1995.</p>
+                    <p><span>Godine:</span> 27</p>
+                    <p><span>Email:</span> ane.lazic@gmail.com</p>
+                    <p><span>Telefon:</span> +381 637372168</p>
+                    <p><span>Prebivalište:</span> Novi Sad, Srbija</p>
+                </div>
+            </div>
+            </div>
         </section>
             
         <section id="skill">
@@ -103,10 +155,46 @@
             <h2 class="srb">Projekti</h2>
         </section>
 
-        <section id="contact">
-            <h2 class="eng">Contact</h2>
-            <h2 class="srb">Kontakt</h2>
+        <section class="contact" id="contact">
+            <h2 class="heading eng"> Contact <span>Me!</span></h2>
+            <h2 class="heading srb">Kontaktiraj <span>Me!</span></h2>
+
+            <form class="eng" action="#">
+                <div class="input-box">
+                    <input type="email" placeholder="Email">
+                </div>
+
+                <div class="input-box">
+                    <input type="text" placeholder="Email Subject">
+                </div>
+
+                <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+                <input type="submit" value="Send Message" class="btn">            
+            </form>
+
+            <form class="srb" action="#">
+                <div class="input-box">
+                    <input type="email" placeholder="Email">
+                </div>
+
+                <div class="input-box">
+                    <input type="text" placeholder="Tema email-a">
+                </div>
+
+                <textarea name="" id="" cols="30" rows="10" placeholder="Vaša poruka"></textarea>
+                <input type="submit" value="Pošalji poruku" class="btn">            
+            </form>
         </section>
+
+        <footer>
+            <div class="footer-text">
+                <p>Copyright &copy; 2023 by Andrej Lazić | All Rights Reserved</p>
+            </div>
+
+            <div class="footer-iconTop">
+                <a href="#home"><i class='bx bxs-upvote'></i></a>
+            </div>
+        </footer>
     </body>
     
 </body>
