text za about me

--- a/index.html
+++ b/index.html
@@ -93,19 +93,26 @@
             <h2 class="srb">O<span> meni</span></h2>
             <div class="about">
                 <div class="about-content eng">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
-                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
-                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
-                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br>
-                    <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
-                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
-                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
-                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>Born in 1995 in Vrbas, but I grew up in Sombor, where I completed my primary and secondary 
+                        education. I am currently 27 years old.
+                        <br><br>
+                        My passion for programming began in high school, where I specialized in computer engineering. 
+                        That's when I discovered my love for coding and software development. In 2014, I participated 
+                        in a competition for 
+                        <a href="https://www.danas.rs/zivot/tehnologije/stepa-i-zoo-vrt-najbolji" target="_blank" attribute>
+                        creating Android applications </a>organized by Telenor in collaboration with Samsung. 
+                        I am proud to say that I won an award in that competition, which further motivated me to 
+                        continue developing my programming skills.
+                        <br><br>
+                        After high school, I enrolled at the Faculty of Technical Sciences in Novi Sad, 
+                        studying Computer Science and Automation, to further deepen my knowledge in programming. 
+                        During my studies, I had the opportunity to write articles 
+                        <a href="https://play.co.rs/author/andrejlazic" target="_blank" attribute>for the magazine 
+                        Play-zine.</a>
+                        <br><br>
+                        In addition to my passion for programming, I have a great love for sports. I actively played
+                        basketball for many years, which not only provided me with physical activity but also taught 
+                        me valuable lessons in teamwork, discipline, and perseverance.
                     </p>
                 </div>
 
@@ -118,19 +125,25 @@
                 </div>
 
                 <div class="about-content srb">
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
-                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
-                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
-                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.<br>
-                    <br>
-                    Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been 
-                    the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of 
-                    type and scrambled it to make a type specimen book. It has survived not only five centuries, but 
-                    also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in 
-                    the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently 
-                    with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
+                    <p>Rođen sam 1995. godine u Vrbasu, ali sam odrastao u Somboru, gde sam završio osnovnu 
+                        i srednju školu. Trenutno imam 27 godina. 
+                        <br><br>
+                        Moja strast prema programiranju započela je u Srednjoj tehničkoj školi, gde sam se usmerio 
+                        za elektrotehničara računara. Tada sam otkrio svoju ljubav prema kodiranju i razvoju softvera.
+                        U 2014. godini, učestvovao sam u takmičenju za 
+                        <a href="https://www.danas.rs/zivot/tehnologije/stepa-i-zoo-vrt-najbolji" target="_blank" attribute>pravljenje android 
+                        aplikacija</a> koje je organizovala kompanija Telenor u saradnji sa Samsung-om. Ponosno mogu 
+                        da kažem da sam osvojio nagradu na tom takmičenju, što me je dodatno motivisalo da nastavim
+                        da razvijam svoje programerske veštine.
+                        <br><br>
+                        Nakon srednje škole, upisao sam Fakultet tehničkih nauka u Novom Sadu na smeru Računarstvo 
+                        i automatika kako bih nastavio da produbljujem svoje znanje iz oblasti programiranja. 
+                        Tokom studija, imao sam priliku da <a href="https://play.co.rs/author/andrejlazic" target="_blank" attribute>pišem 
+                        članke za magazin Play-zine.</a>
+                        <br><br>
+                        Pored svoje strasti prema programiranju, gajim veliku ljubav prema sportu. Dug niz godina
+                        sam se aktivno bavio košarkom, koja mi je pružala ne samo fizičku aktivnost, već i timski
+                        duh i neprocenjive lekcije o disciplini i upornosti.
                     </p>
                 </div>
 
