napsan text za skill i dodatno olaksano menjanje boja na temi

--- a/index.html
+++ b/index.html
@@ -232,17 +232,33 @@
                 </div>
 
                 <div class="skill-text">
-                    <p class="eng">Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-                        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-                        when an unknown printer took a galley of type and scrambled it to make a type 
-                        specimen book. It has survived not only five centuries, but also the leap into 
-                        electronic typesetting, remaining essentially unchanged. It was popularised in 
-                        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-                        and more recently with desktop publishing software like Aldus PageMaker including 
-                        versions of Lorem Ipsum.
+                    <p class="eng">
+                        My programming skills cover a wide range of languages and technologies. 
+                        I took my first steps in programming with <span>Pascal</span>. 
+                        During my studies, I primarily utilized <span>C++</span> through various projects and internships, 
+                        but I also gained experience working with other languages such as <span>C</span>, <span>Python</span>, and <span>Assembly</span>.
+                        <br><br>
+                        Lately, I have been focusing on <span>Web development</span>. I have acquired proficiency in technologies like 
+                    <span>HTML</span>, <span>CSS</span>, and <span>JavaScript</span>, 
+                        enabling me to create dynamic and interactive web pages, 
+                        as well as implement different algorithms as needed.
+                        <br><br>
+                        I am ready to adapt and learn new technologies in order to efficiently develop
+                        new applications.
                     </p>
 
-                    <p class="srb">SRPSKI
+                    <p class="srb">
+                        Moje programerske veštine obuhvataju širok spektar jezika i tehnologija. 
+                        Prve korake u programiranju sam stekao u <span>Pascal-u</span>. 
+                        Na fakultetu sam najviše, kroz razne projekte i prakse, koristio na <span>C++</span>, 
+                        ali sam takođe stekao iskustvo u radu sa drugim jezicima <span>C</span>, <span>Python</span> i <span>Asembler</span>.
+                        <br><br>
+                        U poslednje vreme sam usmeren na <span>Web development</span>. Ovladao sam tehnologijama kao što su 
+                        <span>HTML</span>, <span>CSS</span> i <span>JavaScript</span>, što mi omogućava da kreiram dinamične 
+                        i interaktivne web stranice ali i da po potrebi implementujem različite algoritme.
+                        <br><br> 
+                        Spreman sam da se prilagodim i učim nove tehnologije kako bih efikasno 
+                        razvijao nove aplikacije.
                     </p>
                 </div>
 
