--- a/index.html
+++ b/index.html
@@ -25,44 +25,35 @@
 
 </head>
 <body>
-    <header>
-        <label class="switch">
-            <input type="checkbox" id="languageSwitch">
-            <span class="slider round"></span>
-        </label>
+        <header>
+            <label class="switch">
+                <input type="checkbox" id="languageSwitch">
+                <span class="slider round"></span>
+            </label>
 
-        <nav class="eng">
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#skill">Skills</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
+            <nav >
+                <a href="#home" class="eng">Home</a>
+                <a href="#about" class="eng">About</a>
+                <a href="#skill" class="eng">Skills</a>
+                <a href="#projects" class="eng">Projects</a>
+                <a href="#contact" class="eng">Contact</a>
 
-        <nav class="srb">
-            <a href="#home">Home</a>
-            <a href="#about">O meni</a>
-            <a href="#skill">Veštine</a>
-            <a href="#projects">Projekti</a>
-            <a href="#contact">Kontakt</a>
-        </nav>
+                <a href="#home" class="srb">Home</a>
+                <a href="#about" class="srb">O meni</a>
+                <a href="#skill" class="srb">Veštine</a>
+                <a href="#projects" class="srb">Projekti</a>
+                <a href="#contact" class="srb">Kontakt</a>
+            </nav>
 
-        <i class='bx bxs-moon' id="themeToggle"></i>
-    </header>
+            <i class='bx bxs-moon' id="themeToggle"></i>
+        </header>
 
         <section class="home" id="home">
             <div class="home-left">
                 <div class="home-content eng">
-                    <h3>Hello, my name is</h3>
-                    <h1>Andrej Lazić</h1>
+                    <h3>Hello, <span> my name is </span></h3>
+                    <h1><span>Andrej Lazić</span></h1>
                     <h2 class="my-profesion">I' am a <span class="typingEng"></span></h2>
-                    <script>
-                        var typed = new Typed(".typingEng", {
-                            strings:["Frontend Developer","Web Developer","Software Developer"],
-                            typeSpeed:100,
-                            loop:true,
-                        });
-                    </script>
                     <p>
                         Student on final year at the Faculty of Technical Sciences, specializing in Computer 
                         Science and Automation, and I am a passionate enthusiast in the field of Web and Software 
@@ -85,16 +76,9 @@
                 </div>
 
                 <div class="home-content srb">
-                    <h3>Ćaos, moje ime je</h3>
-                    <h1>Andrej Lazić</h1>
+                    <h3>Zdravo, <span> moje ime je </span></h3>
+                    <h1><span>Andrej Lazić</span></h1>
                     <h2 class="my-profesion">Ja sam <span class="typingSrb"></span></h2>
-                    <script>
-                        var typed = new Typed(".typingSrb", {
-                            strings:["Frontend Developer","Web Developer","Software Developer"],
-                            typeSpeed:100,
-                            loop:true,
-                        });
-                    </script>
                     <p>
                         Student sam završne godine na Fakultetu tehničkih nauka, smer Računarstvo i automatika,
                         i strastveni sam entuzijasta u oblasti Web i Software development-a. Ovde možeš pronaći sve
@@ -302,7 +286,7 @@
                             <div class="projects__subtitle">
                                 <h1 class="projects__title eng">News Article</h1>
                                 <h1 class="projects__title srb">Vesti Članci</h1>
-                                <a href="#" class="projects__button">View Demo<i class='bx bx-right-arrow-alt'></i></a>
+                                <a href="https://news-article-by-andrej.netlify.app/" target="_blank" class="projects__button">Demo<i class='bx bx-right-arrow-alt'></i></a>
                             </div>
                         </div>
 
@@ -334,7 +318,7 @@
                             <div class="projects__subtitle">
                                 <h1 class="projects__title eng">Rain on the Road</h1>
                                 <h1 class="projects__title srb">Kiša na Putu</h1>
-                                <a href="#" class="projects__button">View Demo<i class='bx bx-right-arrow-alt'></i></a>
+                                <a href="#" class="projects__button">Demo<i class='bx bx-right-arrow-alt'></i></a>
                             </div>
                         </div>
 
@@ -362,7 +346,7 @@
                             <div class="projects__subtitle">
                                 <h1 class="projects__title eng">Sorting Algorithms</h1>
                                 <h1 class="projects__title srb">Sortirajući Algoritmi</h1>
-                                <a href="https://www.sololearn.com/compiler-playground/WY9CenSnItmU" target="_blank" class="projects__button">View Demo<i class='bx bx-right-arrow-alt'></i></a>
+                                <a href="https://www.sololearn.com/compiler-playground/WY9CenSnItmU" target="_blank" class="projects__button">Demo<i class='bx bx-right-arrow-alt'></i></a>
                             </div>
                         </div>
 
@@ -412,29 +396,9 @@
                 </div>
             </div>
 
-            <script>
-                const swiperProjects = new Swiper('.projects__container', {
-                    slidesPerView: 2,
-                    // Optional parameters
-                    direction: 'horizontal',
-                    loop: true,
-
-                    // If we need pagination
-                    pagination: {
-                        el: '.swiper-pagination',
-                    },
-
-                    // Navigation arrows
-                    navigation: {
-                        nextEl: '.swiper-button-next',
-                        prevEl: '.swiper-button-prev',
-                    },
-                });
-            </script>
-
         </section>
 
-        <section class="contact" id="contact">
+        <section id="contact" class="contact" >
             <div class="naslov">
                 <h2 class="heading eng">Contact <span>Me!</span></h2>
                 <h2 class="heading srb">Kontaktiraj <span>Me!</span></h2>
@@ -467,6 +431,7 @@
                     <input type="submit" value="Pošalji poruku" class="btn">   
                 </form>
             </div>
+
         </section>
 
         <footer class="footer">
@@ -478,56 +443,5 @@
                 <a href="#home"><i class='bx bxs-upvote'></i></a>
             </div>
         </footer>
-
-        <script>
-            const contactForm = document.getElementById('formEng');
-
-            const sendEmail = (e) =>{
-                e.preventDefault()
-
-                //serviceID - templateID - #form - publicKey
-                emailjs.sendForm('service_9tis45v', 'template_acyoze5', '#formEng', '0MyMuLS2qPS9lp3Ep')
-                .then(()=>{
-                    alert("Message sent successfully");
-                },() =>{
-                    alert("Message not sent (service error)");
-                })
-            }
-
-            contactForm.addEventListener('submit', sendEmail);
-        </script>
-
-        <script>
-            const contactFormSrb = document.getElementById('formSrb');
-
-            const sendEmailSrb = (e) =>{
-                e.preventDefault()
-
-                //serviceID - templateID - #form - publicKey
-                emailjs.sendForm('service_9tis45v', 'template_acyoze5', '#formSrb', '0MyMuLS2qPS9lp3Ep')
-                .then(()=>{
-                    alert("Uspešno poslat email");
-                },() =>{
-                    alert("Email nije poslat (service error)");
-                })
-            }
-
-            contactFormSrb.addEventListener('submit', sendEmailSrb);
-        </script>
-
-        <script>
-            ScrollReveal().reveal('.home-left', { delay: 200, origin: 'top',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.home-right', { delay: 200, origin: 'bottom',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.about-content', { delay: 200, origin: 'left',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.about-image', { delay: 200, origin: 'top',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.about-age', { delay: 200, origin: 'bottom',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.skill-layout', { delay: 200, origin: 'left',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.skill-text', { delay: 200, origin: 'right',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.container', { delay: 200, origin: 'right',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.naslov', { delay: 200, origin: 'top',  distance: '100px', duration: 500, reset: true});
-            ScrollReveal().reveal('.form', { delay: 200, origin: 'bottom',  distance: '100px', duration: 2000, reset: true});
-            ScrollReveal().reveal('.footer', { delay: 200, origin: 'bottom',  distance: '100px', duration: 500, reset: true});
-
-        </script>
 </body>
 </html>
