--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <section class="home" id="home">
             <div class="home-left">
                 <div class="home-content eng">
-                    <h3>Hello, <span> my name is </span></h3>
+                    <h3>Hello, my name is</h3>
                     <h1><span>Andrej Lazić</span></h1>
                     <h2 class="my-profesion">I' am a <span class="typingEng"></span></h2>
                     <p>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="home-content srb">
-                    <h3>Zdravo, <span> moje ime je </span></h3>
+                    <h3>Zdravo, moje ime je</h3>
                     <h1><span>Andrej Lazić</span></h1>
                     <h2 class="my-profesion">Ja sam <span class="typingSrb"></span></h2>
                     <p>
