--- a/index.html
+++ b/index.html
@@ -154,9 +154,11 @@
                 </div>
 
                 <div class="about-info">
-                    <div class="about-image">
-                        <img src="CV1.jpg" alt="Andrej Lazić Image">
-                        <span class="circle-spin"></span>
+                    <div class="about-picture">
+                        <div class="about-image">
+                            <img src="CV1.jpg" alt="Andrej Lazić Image">
+                            <span class="circle-spin"></span>
+                        </div>
                     </div>
                     <div class="about-age">
                         <p class="eng"><span>Born:</span> 23. july 1995.</p>
@@ -356,24 +358,20 @@
                                 <img class="projects__img" src="project-img.png" alt="Projects image">
                                 <div class="overlay">
                                     <p class="eng">
-                                        A website that will make it easier for me to track my collection.
-                                        <br><br>
                                         I have a collection of cans (mostly beer cans) that is becoming increasingly
                                         difficult to keep track of due to its growing size. The idea of this website is to easily check
                                         whether I have a particular can or not.
-                                        <br><br>
+                                        <br>
                                         There will be an SQL server that will contain a table of cans with all the associated parameters,
                                         including an image of the can itself. By reading data from the SQL, I will create a web page
                                         that will display all this information. There will also be an option to add a new
                                         can to the SQL table via the website.
                                     </p>
                                     <p class="srb">
-                                        Web sajt koji će mi olakšati praćenje kolekcije.
-                                        <br><br>
                                         Posedujem kolekciju limenki (pretežno limenki piva) koju je, sa sve većim
                                         obimom, sve teže ispratiti. Ideja ovog sajta je da uvek lako mogu proverit
                                         da li posedujem određenu limenku ili ne.
-                                        <br><br>
+                                        <br>
                                         Postojaće SQL server, koji će sadržati tabelu limenki sa svim pratećim parametrima
                                         kao i sa slikom same limenke. Čitajući podatke iz SQL-a, napraviću web stranicu
                                         koja će prikazivati sve te podatke. Takođe će bit opcija za ubacivanje nove 
