upadte slika za projekte

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                         <!--================ PROJECT 4 ================-->
                         <div class="projects__content swiper-slide">
                             <div class="image-container">
-                                <img class="projects__img" src="project-image.png" alt="Projects image">
+                                <img class="projects__img" src="beer can colection.png" alt="Projects image">
                                 <div class="overlay">
                                     <p class="eng">
                                         I have a collection of cans (mostly beer cans) that is becoming increasingly
