smartocto dodatak za zadatak

--- a/index.html
+++ b/index.html
@@ -38,11 +38,14 @@
                 <a href="#skill" class="eng">Skills</a>
                 <a href="#projects" class="eng">Projects</a>
                 <a href="#contact" class="eng">Contact</a>
+                
                 <a href="#home" class="srb">Home</a>
                 <a href="#about" class="srb">O meni</a>
                 <a href="#skill" class="srb">Veštine</a>
                 <a href="#projects" class="srb">Projekti</a>
                 <a href="#contact" class="srb">Kontakt</a>
+
+                <a href="news.html">Smartocto</a>
             </nav>
             
             <i class='bx bxs-moon' id="themeToggle"></i>   
