hide smartocto in navigation

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a href="#projects" class="srb">Projekti</a>
                 <a href="#contact" class="srb">Kontakt</a>
 
-                <a href="news.html">Smartocto</a>
+                <a href="news.html" style="display: none">Smartocto</a>
             </nav>
             
             <i class='bx bxs-moon' id="themeToggle"></i>   
