Dodat sajt za Limenke

--- a/index.html
+++ b/index.html
@@ -313,6 +313,41 @@
             <div class="container section__border">
                 <div class="projects__container swiper">
                     <div class="swiper-wrapper">
+
+                        <!--================ PROJECT 4 ================-->
+                        <div class="projects__content swiper-slide">
+                            <div class="image-container">
+                                <img class="projects__img" src="beer can colection.png" alt="Projects image">
+                                <div class="overlay">
+                                    <p class="eng">
+                                        I have a collection of cans (mostly beer cans) that is becoming increasingly
+                                        difficult to keep track of due to its growing size. The idea of this website is to easily check
+                                        whether I have a particular can or not.
+                                        <br>
+                                        There will be an SQL server that will contain a table of cans with all the associated parameters,
+                                        including an image of the can itself. By reading data from the SQL, I will create a web page
+                                        that will display all this information. There will also be an option to add a new
+                                        can to the SQL table via the website.
+                                    </p>
+                                    <p class="srb">
+                                        Posedujem kolekciju limenki (pretežno limenki piva) koju je, sa sve većim
+                                        obimom, sve teže ispratiti. Ideja ovog sajta je da uvek lako mogu proverit
+                                        da li posedujem određenu limenku ili ne.
+                                        <br>
+                                        Postojaće SQL server, koji će sadržati tabelu limenki sa svim pratećim parametrima
+                                        kao i sa slikom same limenke. Čitajući podatke iz SQL-a, napraviću web stranicu
+                                        koja će prikazivati sve te podatke. Takođe će bit opcija za ubacivanje nove 
+                                        limenke u SQL tabelu preko sajta.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="projects__subtitle">
+                                <h1 class="projects__title eng">Personal Can Collection</h1>
+                                <h1 class="projects__title srb">Lična Kolekcija Konzervi</h1>
+                                <a href="https://can-collection.netlify.app/" target="_blank" class="projects__button">Website<i class='bx bx-right-arrow-alt'></i></a>
+                            </div>
+                        </div>
+
                         <!--================ PROJECT 1 ================-->
                         <div class="projects__content swiper-slide">
                             <div class="image-container">
@@ -401,39 +436,6 @@
                             </div>
                         </div>
 
-                        <!--================ PROJECT 4 ================-->
-                        <div class="projects__content swiper-slide">
-                            <div class="image-container">
-                                <img class="projects__img" src="beer can colection.png" alt="Projects image">
-                                <div class="overlay">
-                                    <p class="eng">
-                                        I have a collection of cans (mostly beer cans) that is becoming increasingly
-                                        difficult to keep track of due to its growing size. The idea of this website is to easily check
-                                        whether I have a particular can or not.
-                                        <br>
-                                        There will be an SQL server that will contain a table of cans with all the associated parameters,
-                                        including an image of the can itself. By reading data from the SQL, I will create a web page
-                                        that will display all this information. There will also be an option to add a new
-                                        can to the SQL table via the website.
-                                    </p>
-                                    <p class="srb">
-                                        Posedujem kolekciju limenki (pretežno limenki piva) koju je, sa sve većim
-                                        obimom, sve teže ispratiti. Ideja ovog sajta je da uvek lako mogu proverit
-                                        da li posedujem određenu limenku ili ne.
-                                        <br>
-                                        Postojaće SQL server, koji će sadržati tabelu limenki sa svim pratećim parametrima
-                                        kao i sa slikom same limenke. Čitajući podatke iz SQL-a, napraviću web stranicu
-                                        koja će prikazivati sve te podatke. Takođe će bit opcija za ubacivanje nove 
-                                        limenke u SQL tabelu preko sajta.
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="projects__subtitle">
-                                <h1 class="projects__title eng">Personal Can Collection</h1>
-                                <h1 class="projects__title srb">Lična Kolekcija Konzervi</h1>
-                                <a class="projects__button">In progress...</i></a>
-                            </div>
-                        </div>
                     </div>
 
                     <div class="swiper-button-next"><i class='bx bx-chevron-right'></i></div>
